src/test/deca/context/valid/with_object/same_name.deca
class A{
    int a;
    void a(){
        print("ok");
    }
}