src/test/deca/context/invalid/oracle/method_protected.deca
class A {
    protected void meth(){
        print("ok");
    }
}